--- a/index.html
+++ b/index.html
@@ -20,6 +20,59 @@
             </div>
         </div>
     </header>
+    <main class="main">
+        <section class="galary">
+            <h6 class="mtitle">Featured In</h6>
+            <div class="galary__label">
+                <img src="images/vocue.png" alt="label" class="label__vocue  label">
+                <img src="images/glamur.png" alt="label" class="label__glamur label">
+                <img src="images/skimm.png" alt="label" class="label__skimm  label">
+            </div>
+            <div class="about-us">
+                <img src="images/collage.png">
+                <div class="galary__text">
+                    <p class="doc">CLINICALLY PROVEN</p>
+                    <h4 class="name">ISTO</h4>
+                    <p class="galary__description">The ISTO Clinical Study is a randomized, double-blind human study that shows LK-01™ Pure Salidroside supports oxygen uptake and mood state. The preliminary results of our clinical study support LK-01 as a must-have for improved endurance and resiliency.</p>
+                    <button class="galary__btn">Learn more</button>
+                </div>
+            </div>           
+        </section>
+        <section class="statistic">
+            <div class="main__foto">
+                <img src="images/IMAGE.png" alt="foto-mauntain">
+            </div>
+            <p class="list">Industry-changing consistency, purity, and efficacy.</p>
+            <p class="bio">Bioengineered to help you reach your peak</p>
+            <div class="st__info">
+                <p class="st__name">08+</p>
+                <p class="st__mean">Years of research</p>
+            </div>
+            <div class="st__info">
+                <p class="st__name">MIT+YALE</p>
+                <p class="st__mean">Developed by world-leading scientists</p>
+            </div>
+            <div class="st__info">
+                <p class="st__name">300+</p>
+                <p class="st__mean">Peer-reviewed studies</p>
+            </div>
+            <button class="st__btn">View Salidroside studies on PubMed</button>
+        </section>
+        <section class="answer">
+            <div class="answer__text">
+                <p>What’s inside?</p>
+                <h2>All of nature’s healing wisdom.</h2>
+                <h4 class="str">Boost your focus</h4>
+                <p>Encourages higher measures of mental performance like associative thinking, short-term memory, and concentration to help you reach your peak cognitive function.</p>
+                <h4>Increase your energy</h4>
+                <p>Enhances ATP production and mitochondrial function to support your natural energy levels and promote cellular repair.</p>
+                <h4></h4>
+            </div>
+            <div class="answer__picture">
+                <img src="">
+            </div>
+        </section>
+    </main>
     
 </body>
 </html>
