--- a/index.html
+++ b/index.html
@@ -40,38 +40,59 @@
         </section>
         <section class="statistic">
             <div class="main__foto">
-                <img src="images/IMAGE.png" alt="foto-mauntain">
+                <img src="images/IMAGE.png" alt="foto-mauntain" width="1000" heigth="556" class="mauntain">
             </div>
             <p class="list">Industry-changing consistency, purity, and efficacy.</p>
             <p class="bio">Bioengineered to help you reach your peak</p>
-            <div class="st__info">
-                <p class="st__name">08+</p>
-                <p class="st__mean">Years of research</p>
-            </div>
-            <div class="st__info">
-                <p class="st__name">MIT+YALE</p>
-                <p class="st__mean">Developed by world-leading scientists</p>
-            </div>
-            <div class="st__info">
-                <p class="st__name">300+</p>
-                <p class="st__mean">Peer-reviewed studies</p>
+            <div class="div">
+                <div class="st__info">
+                    <p class="st__name">08+</p>
+                    <p class="st__mean">Years of research</p>
+                </div>
+                <div class="st__info">
+                    <p class="st__name">MIT+YALE</p>
+                    <p class="st__mean">Developed by world-leading scientists</p>
+                </div>
+                <div class="st__info">
+                    <p class="st__name">300+</p>
+                    <p class="st__mean">Peer-reviewed studies</p>
+                </div>
             </div>
             <button class="st__btn">View Salidroside studies on PubMed</button>
         </section>
         <section class="answer">
             <div class="answer__text">
-                <p>What’s inside?</p>
-                <h2>All of nature’s healing wisdom.</h2>
-                <h4 class="str">Boost your focus</h4>
-                <p>Encourages higher measures of mental performance like associative thinking, short-term memory, and concentration to help you reach your peak cognitive function.</p>
-                <h4>Increase your energy</h4>
-                <p>Enhances ATP production and mitochondrial function to support your natural energy levels and promote cellular repair.</p>
-                <h4></h4>
+                <p class="texta">What’s inside?</p>
+                <h2 class="textb">All of nature’s healing wisdom.</h2>
+                <h4 class="textd">Boost your focus</h4>
+                <p class="texti">Encourages higher measures of mental performance like associative thinking, short-term memory, and concentration to help you reach your peak cognitive function.</p>
+                <h4 class="textf">Increase your energy</h4>
+                <p class="textg">Enhances ATP production and mitochondrial function to support your natural energy levels and promote cellular repair.</p>
+                <h4 class="texto">Find your calm</h4>
+                <p class="textp">Helps balance your mind's serotonin, norepinephrine, and dopamine levels without causing drowsiness or fatigue, to improve your body's response to stress.</p>
             </div>
             <div class="answer__picture">
-                <img src="">
+                <img src="images/room.png", srcset="images/room_результат.webp" type="imag/webp" width="550" height="812">
             </div>
         </section>
+        <section class="foto__galary">
+            <h3>@Landkindhealth & #BeLandKind</h3>
+            <img src="">
+            <img src="">
+            <img src="">
+            <img src="">
+            <img src="">
+            <img src="">
+            <img src="">
+            <img src="">
+        </section>
+        <footer class="footer">
+            <div>
+                <h2>Raise your supplement standards.</h2>
+                <ul></ul>
+                <ul></ul>
+            </div>
+        </footer>
     </main>
     
 </body>
