--- a/index.html
+++ b/index.html
@@ -76,21 +76,78 @@
             </div>
         </section>
         <section class="foto__galary">
-            <h3>@Landkindhealth & #BeLandKind</h3>
-            <img src="">
-            <img src="">
-            <img src="">
-            <img src="">
-            <img src="">
-            <img src="">
-            <img src="">
-            <img src="">
+            <h3 class="fg__title">@Landkindhealth & #BeLandKind</h3>
+            <img src="images/exam1.png" alt="from__g" width="297" height="297" srcset="images/exam1_conv.webp">
+            <img src="images/exam2.png"  alt="from__g" width="297" height="297" srcset="images/exam2_conv.webp"> 
+            <img src="images/exam3.png"  alt="from__g" width="297" height="297" srcset="images/exam3_conv.webp">
+            <img src="images/exam4.png" alt="from__g" width="297" height="297" srcset="images/exam4_conv.webp">
+            <img src="images/exam5.png" alt="from__g" width="297" height="297" srcset="images/exam5_conv.webp">
+            <img src="images/exam5_1.png" alt="from__g">
+            <img src="images/exam6.png"  alt="from__g">
+            <img src="images/exam7.png" alt="from__g">
         </section>
         <footer class="footer">
-            <div>
-                <h2>Raise your supplement standards.</h2>
-                <ul></ul>
-                <ul></ul>
+            <div class="footer__top">
+                <h2 class="footer__title-left">Raise your<br>supplement<br>standards.</h2>
+                <div class="footer__list-left">
+                    <ul class="menu">Shop
+                        <li class="menu__item">
+                            <a class="menu__link">FAQS</a>
+                        </li class="menu__item">
+                        <li>
+                            <a class="menu__link">Account</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__item">Cart</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__list-right">
+                    <p class="title__list-right">Connect</p>
+                    <ul class="menu">
+                        <li class="meniu__item">
+                            <a class="menu__link">Learn</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link">care@landkind.health</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link">855-305-9894</a>
+                        </li>
+                        <li >
+                            <a>Instagram</a>
+                        </li>
+                        <li>
+                            <a>Twitter</a>
+                        </li>
+                        <li>
+                            <a>LinkedIn</a>
+                        </li>
+                        <li>
+                            <a>Facebook</a>
+                        </li>
+                        <li>
+                            <a>Pinterest</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer__bottom">  
+                <p>© 2023  Landkind, Inc.</p> 
+                <div>
+                    <ul>
+                        <li>
+                            <a>Privacy<br>Policy</a>
+                        </li>
+                        <li>
+                            <a>Terms<br>of Use</a>
+                        </li>
+                        <li>
+                            <a>Return policy</a>
+                        </li>
+                    </ul>
+                    <p>*These statements have not been evaluated by the Food and Drug Administration. This product is not intended to diagnose, treat, cure, or prevent any disease.</p> 
+                </div>             
             </div>
         </footer>
     </main>
